--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.1.2
   flutter_secure_storage: ^8.0.0
   dio: ^5.2.1+1
   cookie_jar: ^4.0.3
@@ -40,6 +41,8 @@ dependencies:
   path_provider: ^2.0.15
   logger: ^1.4.0
   flutter_riverpod: ^2.3.6
+  cached_network_image: ^3.2.3
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
