--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   cached_network_image: ^3.2.3
   photo_view: ^0.14.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
